cs101_information_objects.nim


proc SinglePointInformation_create*(self: SinglePointInformation; ioa: cint;
                                   value: bool; quality: QualityDescriptor): SinglePointInformation {.
    importc: "SinglePointInformation_create",  cdecl.}
proc SinglePointInformation_getValue*(self: SinglePointInformation): bool {.
    importc: "SinglePointInformation_getValue",  cdecl.}
proc SinglePointInformation_getQuality*(self: SinglePointInformation): QualityDescriptor {.
    importc: "SinglePointInformation_getQuality",  cdecl.}
proc SinglePointInformation_destroy*(self: SinglePointInformation) {.
    importc: "SinglePointInformation_destroy",  cdecl.}
## *******************************************************
##   SinglePointWithCP24Time2a (:SinglePointInformation)
## ******************************************************

type
  SinglePointWithCP24Time2a* = ptr sSinglePointWithCP24Time2a

proc SinglePointWithCP24Time2a_create*(self: SinglePointWithCP24Time2a; ioa: cint;
                                      value: bool; quality: QualityDescriptor;
                                      timestamp: CP24Time2a): SinglePointWithCP24Time2a {.
    importc: "SinglePointWithCP24Time2a_create",  cdecl.}
proc SinglePointWithCP24Time2a_destroy*(self: SinglePointWithCP24Time2a) {.
    importc: "SinglePointWithCP24Time2a_destroy",  cdecl.}
proc SinglePointWithCP24Time2a_getTimestamp*(self: SinglePointWithCP24Time2a): CP24Time2a {.
    importc: "SinglePointWithCP24Time2a_getTimestamp",  cdecl.}
## *******************************************************
##   SinglePointWithCP56Time2a (:SinglePointInformation)
## ******************************************************

type
  SinglePointWithCP56Time2a* = ptr sSinglePointWithCP56Time2a

proc SinglePointWithCP56Time2a_create*(self: SinglePointWithCP56Time2a; ioa: cint;
                                      value: bool; quality: QualityDescriptor;
                                      timestamp: CP56Time2a): SinglePointWithCP56Time2a {.
    importc: "SinglePointWithCP56Time2a_create",  cdecl.}
proc SinglePointWithCP56Time2a_destroy*(self: SinglePointWithCP56Time2a) {.
    importc: "SinglePointWithCP56Time2a_destroy",  cdecl.}
proc SinglePointWithCP56Time2a_getTimestamp*(self: SinglePointWithCP56Time2a): CP56Time2a {.
    importc: "SinglePointWithCP56Time2a_getTimestamp",  cdecl.}
## ***********************************************
##  DoublePointInformation (:InformationObject)
## **********************************************

type
  DoublePointInformation* = ptr sDoublePointInformation

proc DoublePointInformation_destroy*(self: DoublePointInformation) {.
    importc: "DoublePointInformation_destroy",  cdecl.}
proc DoublePointInformation_create*(self: DoublePointInformation; ioa: cint;
                                   value: DoublePointValue;
                                   quality: QualityDescriptor): DoublePointInformation {.
    importc: "DoublePointInformation_create",  cdecl.}
proc DoublePointInformation_getValue*(self: DoublePointInformation): DoublePointValue {.
    importc: "DoublePointInformation_getValue",  cdecl.}
proc DoublePointInformation_getQuality*(self: DoublePointInformation): QualityDescriptor {.
    importc: "DoublePointInformation_getQuality",  cdecl.}
## *******************************************************
##   DoublePointWithCP24Time2a (:DoublePointInformation)
## ******************************************************

type
  DoublePointWithCP24Time2a* = ptr sDoublePointWithCP24Time2a

proc DoublePointWithCP24Time2a_destroy*(self: DoublePointWithCP24Time2a) {.
    importc: "DoublePointWithCP24Time2a_destroy",  cdecl.}
proc DoublePointWithCP24Time2a_create*(self: DoublePointWithCP24Time2a; ioa: cint;
                                      value: DoublePointValue;
                                      quality: QualityDescriptor;
                                      timestamp: CP24Time2a): DoublePointWithCP24Time2a {.
    importc: "DoublePointWithCP24Time2a_create",  cdecl.}
proc DoublePointWithCP24Time2a_getTimestamp*(self: DoublePointWithCP24Time2a): CP24Time2a {.
    importc: "DoublePointWithCP24Time2a_getTimestamp",  cdecl.}
## *******************************************************
##   DoublePointWithCP56Time2a (:DoublePointInformation)
## ******************************************************

type
  DoublePointWithCP56Time2a* = ptr sDoublePointWithCP56Time2a

proc DoublePointWithCP56Time2a_create*(self: DoublePointWithCP56Time2a; ioa: cint;
                                      value: DoublePointValue;
                                      quality: QualityDescriptor;
                                      timestamp: CP56Time2a): DoublePointWithCP56Time2a {.
    importc: "DoublePointWithCP56Time2a_create",  cdecl.}
proc DoublePointWithCP56Time2a_destroy*(self: DoublePointWithCP56Time2a) {.
    importc: "DoublePointWithCP56Time2a_destroy",  cdecl.}
proc DoublePointWithCP56Time2a_getTimestamp*(self: DoublePointWithCP56Time2a): CP56Time2a {.
    importc: "DoublePointWithCP56Time2a_getTimestamp",  cdecl.}
## ***********************************************
##  StepPositionInformation (:InformationObject)
## **********************************************

type
  StepPositionInformation* = ptr sStepPositionInformation

## *
##  \brief Create a new instance of StepPositionInformation information object
##
##  \param self Reference to an existing instance to reuse, if NULL a new instance will we dynamically allocated
##  \param ioa Information object address
##  \param value Step position (range -64 ... +63)
##  \param isTransient true if position is transient, false otherwise
##  \param quality quality descriptor (according to IEC 60870-5-101:2003 7.2.6.3)
##
##  \return Reference to the new instance
##

proc StepPositionInformation_create*(self: StepPositionInformation; ioa: cint;
                                    value: cint; isTransient: bool;
                                    quality: QualityDescriptor): StepPositionInformation {.
    importc: "StepPositionInformation_create",  cdecl.}
proc StepPositionInformation_destroy*(self: StepPositionInformation) {.
    importc: "StepPositionInformation_destroy",  cdecl.}
proc StepPositionInformation_getObjectAddress*(self: StepPositionInformation): cint {.
    importc: "StepPositionInformation_getObjectAddress",  cdecl.}
## *
##  \brief Step position (range -64 ... +63)
##

proc StepPositionInformation_getValue*(self: StepPositionInformation): cint {.
    importc: "StepPositionInformation_getValue",  cdecl.}
proc StepPositionInformation_isTransient*(self: StepPositionInformation): bool {.
    importc: "StepPositionInformation_isTransient",  cdecl.}
proc StepPositionInformation_getQuality*(self: StepPositionInformation): QualityDescriptor {.
    importc: "StepPositionInformation_getQuality",  cdecl.}
## ********************************************************
##  StepPositionWithCP24Time2a (:StepPositionInformation)
## *******************************************************

type
  StepPositionWithCP24Time2a* = ptr sStepPositionWithCP24Time2a

proc StepPositionWithCP24Time2a_destroy*(self: StepPositionWithCP24Time2a) {.
    importc: "StepPositionWithCP24Time2a_destroy",  cdecl.}
proc StepPositionWithCP24Time2a_create*(self: StepPositionWithCP24Time2a;
                                       ioa: cint; value: cint; isTransient: bool;
                                       quality: QualityDescriptor;
                                       timestamp: CP24Time2a): StepPositionWithCP24Time2a {.
    importc: "StepPositionWithCP24Time2a_create",  cdecl.}
proc StepPositionWithCP24Time2a_getTimestamp*(self: StepPositionWithCP24Time2a): CP24Time2a {.
    importc: "StepPositionWithCP24Time2a_getTimestamp",  cdecl.}
## ********************************************************
##  StepPositionWithCP56Time2a (:StepPositionInformation)
## *******************************************************

type
  StepPositionWithCP56Time2a* = ptr sStepPositionWithCP56Time2a

proc StepPositionWithCP56Time2a_destroy*(self: StepPositionWithCP56Time2a) {.
    importc: "StepPositionWithCP56Time2a_destroy",  cdecl.}
proc StepPositionWithCP56Time2a_create*(self: StepPositionWithCP56Time2a;
                                       ioa: cint; value: cint; isTransient: bool;
                                       quality: QualityDescriptor;
                                       timestamp: CP56Time2a): StepPositionWithCP56Time2a {.
    importc: "StepPositionWithCP56Time2a_create",  cdecl.}
proc StepPositionWithCP56Time2a_getTimestamp*(self: StepPositionWithCP56Time2a): CP56Time2a {.
    importc: "StepPositionWithCP56Time2a_getTimestamp",  cdecl.}
## *********************************************
##  BitString32 (:InformationObject)
## ********************************************

type
  BitString32* = ptr sBitString32

proc BitString32_destroy*(self: BitString32) {.importc: "BitString32_destroy",
     cdecl.}
proc BitString32_create*(self: BitString32; ioa: cint; value: uint32_t): BitString32 {.
    importc: "BitString32_create",  cdecl.}
proc BitString32_getValue*(self: BitString32): uint32_t {.
    importc: "BitString32_getValue",  cdecl.}
proc BitString32_getQuality*(self: BitString32): QualityDescriptor {.
    importc: "BitString32_getQuality",  cdecl.}
## *********************************************
##  Bitstring32WithCP24Time2a (:BitString32)
## ********************************************

type
  Bitstring32WithCP24Time2a* = ptr sBitstring32WithCP24Time2a

proc Bitstring32WithCP24Time2a_destroy*(self: Bitstring32WithCP24Time2a) {.
    importc: "Bitstring32WithCP24Time2a_destroy",  cdecl.}
proc Bitstring32WithCP24Time2a_create*(self: Bitstring32WithCP24Time2a; ioa: cint;
                                      value: uint32_t; timestamp: CP24Time2a): Bitstring32WithCP24Time2a {.
    importc: "Bitstring32WithCP24Time2a_create",  cdecl.}
proc Bitstring32WithCP24Time2a_getTimestamp*(self: Bitstring32WithCP24Time2a): CP24Time2a {.
    importc: "Bitstring32WithCP24Time2a_getTimestamp",  cdecl.}
## *********************************************
##  Bitstring32WithCP56Time2a (:BitString32)
## ********************************************

type
  Bitstring32WithCP56Time2a* = ptr sBitstring32WithCP56Time2a

proc Bitstring32WithCP56Time2a_destroy*(self: Bitstring32WithCP56Time2a) {.
    importc: "Bitstring32WithCP56Time2a_destroy",  cdecl.}
proc Bitstring32WithCP56Time2a_create*(self: Bitstring32WithCP56Time2a; ioa: cint;
                                      value: uint32_t; timestamp: CP56Time2a): Bitstring32WithCP56Time2a {.
    importc: "Bitstring32WithCP56Time2a_create",  cdecl.}
proc Bitstring32WithCP56Time2a_getTimestamp*(self: Bitstring32WithCP56Time2a): CP56Time2a {.
    importc: "Bitstring32WithCP56Time2a_getTimestamp",  cdecl.}
## ************************************************************
##  MeasuredValueNormalizedWithoutQuality : InformationObject
## ***********************************************************

type
  MeasuredValueNormalizedWithoutQuality* = ptr sMeasuredValueNormalizedWithoutQuality

proc MeasuredValueNormalizedWithoutQuality_destroy*(
    self: MeasuredValueNormalizedWithoutQuality) {.
    importc: "MeasuredValueNormalizedWithoutQuality_destroy",  cdecl.}
proc MeasuredValueNormalizedWithoutQuality_create*(
    self: MeasuredValueNormalizedWithoutQuality; ioa: cint; value: cfloat): MeasuredValueNormalizedWithoutQuality {.
    importc: "MeasuredValueNormalizedWithoutQuality_create",  cdecl.}
proc MeasuredValueNormalizedWithoutQuality_getValue*(
    self: MeasuredValueNormalizedWithoutQuality): cfloat {.
    importc: "MeasuredValueNormalizedWithoutQuality_getValue",  cdecl.}
proc MeasuredValueNormalizedWithoutQuality_setValue*(
    self: MeasuredValueNormalizedWithoutQuality; value: cfloat) {.
    importc: "MeasuredValueNormalizedWithoutQuality_setValue",  cdecl.}
## *********************************************
##  MeasuredValueNormalized
## ********************************************
